; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/s5p-mfc/extr_s5p_mfc_cmd_v5.c_s5p_mfc_sys_init_cmd_v5.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/s5p-mfc/extr_s5p_mfc_cmd_v5.c_s5p_mfc_sys_init_cmd_v5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s5p_mfc_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.s5p_mfc_cmd_args = type { i32* }

@S5P_FIMV_H2R_CMD_SYS_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.s5p_mfc_dev*)* @s5p_mfc_sys_init_cmd_v5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s5p_mfc_sys_init_cmd_v5(%struct.s5p_mfc_dev* %0) #0 {
  %2 = alloca %struct.s5p_mfc_dev*, align 8
  %3 = alloca %struct.s5p_mfc_cmd_args, align 8
  store %struct.s5p_mfc_dev* %0, %struct.s5p_mfc_dev** %2, align 8
  %4 = call i32 @memset(%struct.s5p_mfc_cmd_args* %3, i32 0, i32 8)
  %5 = load %struct.s5p_mfc_dev*, %struct.s5p_mfc_dev** %2, align 8
  %6 = getelementptr inbounds %struct.s5p_mfc_dev, %struct.s5p_mfc_dev* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = getelementptr inbounds %struct.s5p_mfc_cmd_args, %struct.s5p_mfc_cmd_args* %3, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  store i32 %8, i32* %11, align 4
  %12 = load %struct.s5p_mfc_dev*, %struct.s5p_mfc_dev** %2, align 8
  %13 = load i32, i32* @S5P_FIMV_H2R_CMD_SYS_INIT, align 4
  %14 = call i32 @s5p_mfc_cmd_host2risc_v5(%struct.s5p_mfc_dev* %12, i32 %13, %struct.s5p_mfc_cmd_args* %3)
  ret i32 %14
}

declare dso_local i32 @memset(%struct.s5p_mfc_cmd_args*, i32, i32) #1

declare dso_local i32 @s5p_mfc_cmd_host2risc_v5(%struct.s5p_mfc_dev*, i32, %struct.s5p_mfc_cmd_args*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
